[gd_scene load_steps=9 format=3 uid="uid://dbpkcwga3251w"]

[ext_resource type="Script" path="res://src/scripts/ui/components/config_selector.gd" id="1_0cw62"]
[ext_resource type="Texture2D" uid="uid://dp7xutrajl5fw" path="res://src/resources/assets/ui/folder.svg" id="1_mshcn"]
[ext_resource type="Texture2D" uid="uid://c867hwqrtf2an" path="res://src/resources/assets/ui/download.svg" id="2_wr7ge"]
[ext_resource type="Texture2D" uid="uid://bsnynahp005eg" path="res://src/resources/assets/ui/refresh.svg" id="3_ef6m5"]
[ext_resource type="Texture2D" uid="uid://4beyn2jx8qy6" path="res://src/resources/assets/ui/trash.svg" id="4_u4ikq"]
[ext_resource type="Theme" uid="uid://5tyintmrnhfs" path="res://src/resources/styles/window/window_theme.tres" id="6_vysmk"]
[ext_resource type="Texture2D" uid="uid://c4sv5wkd2de3o" path="res://src/resources/assets/ui/paste.svg" id="7_mfx0p"]
[ext_resource type="PackedScene" uid="uid://bblvegt12shc8" path="res://src/scenes/ui/components/info_popup.tscn" id="8_3jx4r"]

[node name="ConfigSelector" type="VBoxContainer"]
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
grow_horizontal = 2
grow_vertical = 2
size_flags_vertical = 3
script = ExtResource("1_0cw62")

[node name="HBoxContainer2" type="HBoxContainer" parent="."]
custom_minimum_size = Vector2(0, 64)
layout_mode = 2

[node name="LoadConfFile" type="Button" parent="HBoxContainer2"]
unique_name_in_owner = true
layout_mode = 2
size_flags_horizontal = 3
text = "File"
icon = ExtResource("1_mshcn")
expand_icon = true

[node name="LoadConfURL" type="Button" parent="HBoxContainer2"]
unique_name_in_owner = true
layout_mode = 2
size_flags_horizontal = 3
text = "URL"
icon = ExtResource("2_wr7ge")
expand_icon = true

[node name="RefreshConfList" type="Button" parent="HBoxContainer2"]
unique_name_in_owner = true
layout_mode = 2
size_flags_horizontal = 3
text = "Refresh"
icon = ExtResource("3_ef6m5")
expand_icon = true

[node name="DeleteSelected" type="Button" parent="HBoxContainer2"]
unique_name_in_owner = true
layout_mode = 2
size_flags_horizontal = 3
text = "Delete"
icon = ExtResource("4_u4ikq")
expand_icon = true

[node name="ConfigList" type="ItemList" parent="."]
unique_name_in_owner = true
layout_mode = 2
size_flags_vertical = 3
icon_mode = 0

[node name="ImportConfigFile" type="FileDialog" parent="."]
unique_name_in_owner = true
title = "Open a File"
initial_position = 2
size = Vector2i(1200, 600)
min_size = Vector2i(1200, 600)
max_size = Vector2i(1200, 600)
theme = ExtResource("6_vysmk")
ok_button_text = "Open"
mode_overrides_title = false
file_mode = 0
access = 2
filters = PackedStringArray("*.tbt")

[node name="DownloadConfigPanel" type="Window" parent="."]
unique_name_in_owner = true
title = "Download Config from URL"
initial_position = 2
size = Vector2i(800, 320)
visible = false
min_size = Vector2i(800, 320)
max_size = Vector2i(800, 320)
theme = ExtResource("6_vysmk")

[node name="Control" type="Control" parent="DownloadConfigPanel"]
layout_mode = 3
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
grow_horizontal = 2
grow_vertical = 2

[node name="MarginContainer" type="MarginContainer" parent="DownloadConfigPanel/Control"]
layout_mode = 1
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
grow_horizontal = 2
grow_vertical = 2

[node name="VBoxContainer" type="VBoxContainer" parent="DownloadConfigPanel/Control/MarginContainer"]
layout_mode = 2
alignment = 1

[node name="HBoxContainer" type="HBoxContainer" parent="DownloadConfigPanel/Control/MarginContainer/VBoxContainer"]
layout_mode = 2

[node name="URLEdit" type="LineEdit" parent="DownloadConfigPanel/Control/MarginContainer/VBoxContainer/HBoxContainer"]
unique_name_in_owner = true
layout_mode = 2
size_flags_horizontal = 3
theme_override_font_sizes/font_size = 40
placeholder_text = "URL"

[node name="PasteLink" type="Button" parent="DownloadConfigPanel/Control/MarginContainer/VBoxContainer/HBoxContainer"]
custom_minimum_size = Vector2(128, 0)
layout_mode = 2
icon = ExtResource("7_mfx0p")
icon_alignment = 1
expand_icon = true

[node name="DownloadConfig" type="Button" parent="DownloadConfigPanel/Control/MarginContainer/VBoxContainer"]
unique_name_in_owner = true
layout_mode = 2
theme_override_font_sizes/font_size = 48
text = "Download"

[node name="URLCancel" type="Button" parent="DownloadConfigPanel/Control/MarginContainer/VBoxContainer"]
layout_mode = 2
theme_override_font_sizes/font_size = 48
text = "Cancel"

[node name="ImportConfigNotice" parent="." instance=ExtResource("8_3jx4r")]
unique_name_in_owner = true
title = "External Configs"
visible = false

[node name="Label" parent="ImportConfigNotice/MarginContainer/VBoxContainer" index="0"]
text = "Be careful with configs you get from other sources. Make sure you trust the source you get configs from!"

[node name="OKButton" parent="ImportConfigNotice/MarginContainer/VBoxContainer/HBoxContainer" index="0"]
text = "I understand"

[connection signal="pressed" from="HBoxContainer2/LoadConfFile" to="." method="_on_load_conf_file_pressed"]
[connection signal="pressed" from="HBoxContainer2/LoadConfURL" to="." method="_on_load_conf_url_pressed"]
[connection signal="pressed" from="HBoxContainer2/RefreshConfList" to="." method="_on_refresh_conf_list_pressed"]
[connection signal="pressed" from="HBoxContainer2/DeleteSelected" to="." method="_on_delete_selected_pressed"]
[connection signal="close_requested" from="ImportConfigFile" to="." method="_on_import_config_file_close_requested"]
[connection signal="close_requested" from="DownloadConfigPanel" to="." method="_on_download_config_panel_close_requested"]
[connection signal="pressed" from="DownloadConfigPanel/Control/MarginContainer/VBoxContainer/HBoxContainer/PasteLink" to="." method="_on_paste_link_pressed"]
[connection signal="pressed" from="DownloadConfigPanel/Control/MarginContainer/VBoxContainer/DownloadConfig" to="." method="_on_download_config_pressed"]
[connection signal="pressed" from="DownloadConfigPanel/Control/MarginContainer/VBoxContainer/URLCancel" to="." method="_on_url_cancel_pressed"]

[editable path="ImportConfigNotice"]
